aula sobre javascript e html: adicionando o js externo

--- a/javascript-basico/htmlPlusJavascript.html
+++ b/javascript-basico/htmlPlusJavascript.html
@@ -7,8 +7,6 @@
 
     <body>
         
-        <script>
-            console.log("Olá mundo! Javascript escrito dentro do html")
-        </script>
+        <script src="consoleLog.js"></script>
     </body>
 </html>
