Execício sobre Number e o objeto Math

--- a/javascript-basico/exercicioNumberMath.html
+++ b/javascript-basico/exercicioNumberMath.html
@@ -6,10 +6,24 @@
     <title>Document</title>
 </head>
 <body>
+    <!--
     <section>
         <h1>O seu número é <span id="numero-titulo">0</span></h1>
+        <div id="texto"></div>
+        <div id="texto1"></div>
+        <div id="texto2"></div>
+        <div id="texto3"></div>
+        <div id="texto4"></div>
+        <div id="texto5"></div>
+        <div id="texto6"></div>
+    </section>
+    -->
+    <section>
+        <h1>O seu número é <span id="numero-titulo">0</span></h1>
+        <div id="texto">Texto</div>
     </section>
 
-    <script src="exercicioNumberMath.js"></script>
+    <!--<script src="exercicioNumberMath.js"></script>-->
+    <script src="resolucaoExNumberMath.js"></script>
 </body>
 </html>
