Exercício utilizando array, funções e objetos no javascript

--- a/javascript-basico/exercicioArrayObjetoFuncao.html
+++ b/javascript-basico/exercicioArrayObjetoFuncao.html
@@ -7,7 +7,7 @@
     <title>Formulário exercício</title>
 </head>
 <body>
-    <form action="" class="form">
+    <form class="form">
         <div>
             <p>Nome: <input type="text" class="nome"></p>
         </div>
@@ -24,9 +24,10 @@
             <p>Altura: <input type="text" class="altura"></p>
         </div>
 
-        <input type="button" value="Enviar">
+        <button>Enviar</button>
     </form>
 
+    <dir class="resultado"></dir>
     <script src="exercicioArrayObjetoFuncao.js"></script>
 </body>
 </html>
